data/derived/comb/progs/unify/prog2952.ml.out
Characters 96-97:
  if List.length = 2
                   ^
Error: This expression has type int but an expression was expected of type
         'a list -> int
